shopingkart/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_OpportunityType__c</fullName>
        <label>Opportunity  Type</label>
        <picklist>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Sub_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubOpportunityType__c</fullName>
        <label>SubOpportunityType</label>
        <picklist>
            <controllingField>Customer_OpportunityType__c</controllingField>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>visa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
</CustomObject>